--- a/inventory_management/inventory/templates/inventory/index.html
+++ b/inventory_management/inventory/templates/inventory/index.html
@@ -4,11 +4,22 @@
 <div>
 	<div class="row">
 		<div class="col-sm-11 col-md-4 mx-auto mt-5 px-3">
-			<h1 class="fw-light">Track and Manage Your Inventory</h1>
-			<p class="fw-light">Keep track of your inventory and receive quantity alerts for low inventory</p>
-
+			<h1 class="fw-light">ACE Software</h1>
+			<p class="fw-light">HD Group</p>
 			<div>
-				<a href="{% url 'dashboard' %}" class="btn btn-primary">Get Started Now!</a>
+				<a href="{% url 'dashboard' %}" class="btn btn-primary">Products</a>
+			</div>
+			<div>
+				<a href="{% url 'order-dashboard' %}" class="btn btn-primary">Orders</a>
+			</div>
+			<div>
+				<a href="{% url 'client-dashboard' %}" class="btn btn-primary">Clients</a>
+			</div>
+			<div>
+				<a href="{% url 'invoice-dashboard' %}" class="btn btn-primary">Invoice</a>
+			</div>
+			<div>
+				<a href="{% url 'purchase-dashboard' %}" class="btn btn-primary">Purchases</a>
 			</div>
 		</div>
 	</div>
