--- a/inventory_management/inventory/templates/inventory/order_item_form.html
+++ b/inventory_management/inventory/templates/inventory/order_item_form.html
@@ -1,13 +1,19 @@
 {% extends 'inventory/base.html' %}
 {% load crispy_forms_tags %}
-
 {% block content %}
-<a href="{% url 'dashboard' %}" class="btn btn-outline-primary my-3 mx-4">Go Back</a>
-
+<!---
+<a href="{% url 'order-item-list' pk=13 %}" class="btn btn-outline-primary my-3 mx-4">Go Back</a>
+-->
 <div class="row">
 	<div class="col-11 col-md-4 mx-auto mt-5">
-		<h1>Inventory Item</h1>
-
+		{% if messages %}
+		<div class="alert alert-warning mt-3">
+			{% for message in messages %}
+			{{ message }}
+			{% endfor %}
+		</div>
+		{% endif %}
+		<h1>OrderItem</h1>
 		<form method="POST" enctype="multipart/form-data">
 			{% csrf_token %}
 			{{ form|crispy }}
